# ame-data-engineer-challenge

./: .gitignore  Makefile  README.md  challenge.md  docker-compose.yaml  example.env  pyproject.toml
ame_data_engineer_challenge/: create_tables.py  data_analysis.ipynb  data_ingestion.ipynb
ame_data_engineer_challenge/core/: config.py  connection.py
docs/: challenge.md  data_ingestion.md
