[tool.poetry]
name = "ame-data-engineer-challenge"
version = "0.1.0"
description = ""
authors = ["joaooliveira247 <joaooliveira247@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.1"
pydantic-settings = "^2.2.1"
psycopg = "^3.1.19"
psycopg-binary = "^3.1.19"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
